图表颜色优化

--- a/src/main/resources/fxml/statistics.fxml
+++ b/src/main/resources/fxml/statistics.fxml
@@ -137,6 +137,6 @@
 		</HBox>
 	</VBox>
 	
-	<VBox fx:id="chart" styleClass="chart"></VBox>
+	<VBox fx:id="charts" styleClass="charts"></VBox>
 	
 </FlowPane>
