--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -82,8 +82,8 @@
 		<HBox styleClass="footer">
 			<HBox fx:id="filters" styleClass="filters">
 				<Button fx:id="all" text="全部" onAction="#handleAllAction" />
-				<Button fx:id="download" text="下载中" onAction="#handleDownloadAction" />
-				<Button fx:id="complete" text="下载完成" onAction="#handleCompleteAction" />
+				<Button fx:id="download" text="下载" onAction="#handleDownloadAction" />
+				<Button fx:id="complete" text="完成" onAction="#handleCompleteAction" />
 			</HBox>
 			<HBox fx:id="statuses" styleClass="statuses">
 				<Label text="↓" />
